Fix height for service headers on mobile

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -104,7 +104,7 @@ body {
   line-height: 50px;
   font-style: normal;
   color: #999;
-  height: 50px;
+  min-height: 50px;
   display: block;
   padding: 8px;
 }
